Fix alignment

--- a/AuthNew/AuthComponent-standalone.scss
+++ b/AuthNew/AuthComponent-standalone.scss
@@ -69,12 +69,18 @@
 		background-color: transparent;
 		pointer-events: none;
 		&[data-alignment="left"] {
-			left: 12px;
+			left: 0;
 		}
 		&[data-alignment="right"] {
-			right: -12px;
+			right: 0;
 		}
-		&.center {
+		&[data-alignment="left-fixed"] {
+			left: 0;
+		}
+		&[data-alignment="right-fixed"] {
+			right: 0;
+		}
+		&[data-alignment="center"] {
 			margin: auto!important;
 			position: fixed;
 			width: 100vw;
